preflight/tests/ui/fail-arguments.stderr
error: Unknown field: `arg`
  --> $DIR/fail-arguments.rs:12:51
   |
12 | #[avionics_harness(default = "Controller::new()", arg = "ument")]
   |                                                   ^^^
